feat: deliver missing API slice D3a7a0f6
